@@ -7,6 +7,10 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 == Unreleased
 
+Enhancements::
+
+* allow page background image to be specified per layout using `+{page-layout}+` attribute reference in path (#1739)
+
 Bug Fixes::
 
 * fix crash when border color is transparent (thematic_break_border_color, admonition_column_rule, quote_border_color, verse_border_color)
